@@ -2,7 +2,7 @@
 require File.expand_path('../application', __FILE__)
 
 # Settings specific to the PROIEL application (i.e. not Rails). You can
-# override any of these settings in config/environments/*.
+# override these settings in config/environments/*.
 Proiel::Application.configure do
   # If true, will log changes to annotation objects in the changelog.
   config.auditing = true
@@ -18,6 +18,22 @@ Proiel::Application.configure do
 
   # Pull in configuration variables from the .env file
   Dotenv.load
+
+  # Configure action mailer
+  config.action_mailer.delivery_method = if Rails.env.test?
+      :test
+    else
+      :sendmail
+    end
+
+  config.action_mailer.default_url_options = {
+    host: ENV['PROIEL_BASE_URL']
+  }
+
+  config.action_mailer.sendmail_settings = {
+    location:  '/usr/sbin/sendmail',
+    arguments: '-i'
+  }
 end
 
 # Initialize the rails application
